[package]
name = "network"
version = "0.1.0"
edition = "2021"
description = "P2P networking for ReviewMesh."
license = "MIT OR Apache-2.0"

[dependencies]
libp2p = { version = "0.52", features = ["mdns", "floodsub", "noise", "tcp", "websocket", "yamux", "macros"] }
libp2p-yamux = "0.44"
libp2p-mdns = { version = "0.44", features = ["tokio"] }
libp2p-tcp = { version = "0.40.1", features = ["tokio"] }
futures = "0.3"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
base58 = "0.2"
hmac = "0.12"
sha2 = "0.10"
common = { path = "../common" }
